# ProgrammingforResearchinNeuroscience2026

./: .gitignore  README.md  main.py  notes_and_practice.ipynb  pyproject.toml  pyproject.toml.save
Week1_Materials/: functions.py  functions_jupyter.ipynb
Week2_Materials/: addition.ipynb  notes.ipynb  numpy.ipynb  numpy.md  pandas.ipynb
Week3_Materials/: more_pandas.ipynb  slicing.md  test.ipynb
python_tutor/: README.md  history_manager.py  main.py  pyproject.toml  python_basics.md  python_rag.py  setup_environment.sh  tutor_analytics.py  tutor_stats.py
